留言修改第二版

--- a/src/main/resources/templates/front/message.html
+++ b/src/main/resources/templates/front/message.html
@@ -35,9 +35,9 @@
 	min-height: 165px;
 	line-height: 30px;
 	padding-top: 10px;
+	border-right: 1px #000 dashed;
 }
 .conmes{
-	border-left: 1px #000 dashed;
 	min-height: 165px;
 	padding-left:30px;
 	padding-top: 10px;
@@ -138,7 +138,7 @@
 				</div>
 				<div class="mess">
 					<div class="name col-md-2">
-						<img alt="默认头像" src="http://www.youngzhang.cn:8999/image/bozhu.jpeg" width="70%" height="60%"><br/>
+						<img alt="默认头像" src="http://www.youngzhang.cn:8999/image/bozhu.jpeg" width="60%" height="60%"><br/>
 					Young<br/>
 					</div>
 					<div class="conmes col-md-10" style="font-size: 24px;line-height: 47px;color: blue;"><p>&nbsp; &nbsp; &nbsp; &nbsp; 
