添加ip访问量

--- a/src/main/resources/templates/front/message.html
+++ b/src/main/resources/templates/front/message.html
@@ -29,15 +29,16 @@
 	min-height: 165px;
 	border-bottom: 1px #000 dashed;
 	clear: both;
+	margin-bottom: 5px;
 }
 .name{
 	text-align: center;
 	min-height: 165px;
 	line-height: 30px;
 	padding-top: 10px;
-	border-right: 1px #000 dashed;
 }
 .conmes{
+	border-left: 1px #000 dashed;
 	min-height: 165px;
 	padding-left:30px;
 	padding-top: 10px;
