--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="baidu-site-verification" content="m5MzOzsVQm" />
 <script src="/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/layer/layer.js" type="text/javascript" charset="utf-8"></script>
