主页标题修改

--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/css/front/index.css"/>
 
 
-<title>欢迎来到Young博客</title>
+<title>Young's 博客</title>
 </head>
 <body>
 	<div><!-- 整体div -->
