添加天齐页 修改晓培页

--- a/src/main/resources/templates/hxp/index.html
+++ b/src/main/resources/templates/hxp/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=GB2312">
-		<title>爱软软一辈子</title>
+		<title>爱即一辈子</title>
 	    
         <link type="text/css" rel="stylesheet" href="/css/hxp/default.css">
 		<script type="text/javascript" src="/js/hxp/jquery.min.js"></script>
@@ -29,28 +29,26 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			        	<span class="say">　　My Dear:软软!</span><br>
+			        	<span class="say">My Dear:软软!</span><br>
+						<span class="say">   </span><br>
+			        	<span class="say">   曾笑过哭过，</span><br>
+						<span class="say">   </span><br>
+			        	<span class="say">   也呆过傻过，</span><br>
+						<span class="say">   </span><br>
+						<span class="say">   我只想珍惜爱你的每分每秒。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我想珍惜爱你的每分每秒。</span><br>
+			        	<span class="say">   你喜欢旅游，我带你走遍千山万水；</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 等很老时，依然有你温柔的拥抱，和我甜蜜的微笑。</span><br>
+			        	<span class="say">   你喜欢美食，我带你吃遍天下美味；</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 即使受了再大的委屈，也坚信你是我一生的依靠。 </span><br>
+			        	<span class="say">   你喜欢睡觉，我和你每天梦中相会。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 为爱你，曾疯过狂过；</span><br>
+			        	<span class="say">   待白头之时，依然有你温柔的拥抱，和我甜蜜的微笑。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 为爱你，也呆过傻过；</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say"> 为爱你，曾笑过哭过。</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say"> 我要告诉全世界,我是为你而来。</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say"> 在你难过的时候，给你一个温暖的怀抱；</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say"> 在你疲惫的时候，给你一个坚实的依靠。</span><br>
+			        	<span class="say">   此生，足矣。 </span>
                         <span class="say"> </span><br><br>
 						<span class="say"> </span>
-                        <span class="say"><span class="space"></span> Yours:Yingying</span>
+                        <span class="say"><span class="space"></span> XuYang</span>
 			        </div>
                 </div>
                 <div id="clock-box">
@@ -196,7 +194,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2012, 04, 29);		//时间年月日
+		    together.setFullYear(2012, 03, 29);		//时间年月日   实际日期 2012-04-29  坑~JS 月份有问题？
 		    together.setHours(4);						//小时	
 		    together.setMinutes(0);					//分钟
 		    together.setSeconds(0);					//秒前一位
