--- a/src/main/resources/templates/admin/iframe/editOrAddView.html
+++ b/src/main/resources/templates/admin/iframe/editOrAddView.html
@@ -32,6 +32,8 @@
     <label class="col-sm-2 control-label">ID</label>
     <div class="col-sm-8">
       <input type="text" class="form-control" name="id" value="${con.id!}">
+      <input type="text" class="form-control" name="time" value="${con.time!}">
+      <input type="text" class="form-control" name="look" value="${con.look!}">
     </div>
     <div class="col-sm-2"></div>
   </div>
