--- a/src/main/resources/templates/love/index.html
+++ b/src/main/resources/templates/love/index.html
@@ -35,17 +35,19 @@
 						<span class="say">   </span><br>
 			        	<span class="say">   百里挑一的有趣灵魂，</span><br>
 						<span class="say">   </span><br>
-						<span class="say">   你是我心里的小憨憨和傻白甜。</span><br>
+						<span class="say">   你就是我心里的小憨憨和傻白甜。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">   我们相识、相见、相恋，</span><br>
+			        	<span class="say">   我们从相识到相见，最后相恋，</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">   处处充满奇幻；</span><br>
+			        	<span class="say">   充满了难以置信的奇幻。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">   说句真心的话</span><br>
+			        	<span class="say">   但我们相恋之后</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">   我真的很喜欢这样缠绵式的恋爱，</span><br>
+			        	<span class="say">   我超级喜欢你给我的缠绵式恋爱，</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">   亲爱的，我爱你 </span>
+			        	<span class="say">   说句最真心的话： </span>
+						<span class="say"> </span><br>
+			        	<span class="say">   亲爱的，我爱你，不仅仅是喜欢。 </span>
                         <span class="say"> </span><br><br>
 						<span class="say"> </span>
                         <span class="say"><span class="space"></span> XuYang</span>
@@ -194,7 +196,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2020, 05, 19);		//时间年月日   实际日期 2012-04-29  坑~JS 月份有问题？
+		    together.setFullYear(2020, 05, 20);		//时间年月日   实际日期 2012-04-29  坑~JS 月份有问题？
 		    together.setHours(11);						//小时	
 		    together.setMinutes(20);					//分钟
 		    together.setSeconds(0);					//秒前一位
