--- a/src/main/resources/templates/love/index.html
+++ b/src/main/resources/templates/love/index.html
@@ -196,12 +196,14 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2020, 05, 21);		//时间年月日   实际日期 2012-04-29  坑~JS 月份有问题？
+		    together.setFullYear(2020);		//时间年月日  
+		    together.setMonth(5-1);		//时间年月日    月份-1 是五月
+		    together.setDate(20);
 		    together.setHours(11);						//小时	
 		    together.setMinutes(20);					//分钟
 		    together.setSeconds(0);					//秒前一位
 		    together.setMilliseconds(0);				//秒第二位
-
+		    alert(together);
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
             while (true) {
